fixed animation on smaller screens

--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ a span {
 }
 
 a span:hover {
-  color: #ffd700;
+  color: #201c02;
 }
 
 @media (max-width: 480px) {
@@ -244,7 +244,7 @@ a span:hover {
     background-color: rgba(255, 255, 255, 0.7) !important;
   }
   .image-box {
-    top: 305px;
+    top: 325px;
     left: 0;
     width: 100%;
     z-index: 90;
@@ -459,9 +459,18 @@ table tr:last-child td:last-child {
   .image-section3 {
     border-radius: 10px !important;
     width: 100%;
-    height: 350px;
+    height: 300px;
     margin-left: 20px;
+    opacity: 1;
+    transition: none;
   }
+
+  .image-section img,
+  .image-section2 img,
+  .image-section3 img {
+    transform: none;
+  }
+
   .about-box .text-section {
     margin-left: 10px !important;
     margin-bottom: 20px;
@@ -530,9 +539,9 @@ table tr:last-child td:last-child {
 }
 
 .custom-card:hover {
-  animation: bounce 0.4s ease; /* Bounce effect */
+  animation: bounce 0.4s ease;
   transform: translateY(-20px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Stronger shadow */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
 .icon-box {
@@ -558,6 +567,40 @@ table tr:last-child td:last-child {
 .card-text {
   text-align: left;
   font-size: 16px;
+}
+
+@media only screen and (max-width: 480px) {
+  .custom-card {
+    opacity: 0.7;
+    transform: none;
+  }
+  .custom-card:hover {
+    animation: none;
+    transform: translateY(-10px);
+  }
+  @keyframes moveAround {
+    0% {
+      transform: translateX(-100px) rotate(-10deg) scale(0.8);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0) rotate(0deg) scale(1);
+      opacity: 1;
+    }
+  }
+  @keyframes bounce {
+    0% {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+  .container .row {
+    margin-bottom: 30px;
+  }
 }
 
 .container .row {
